fixed cropped img

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -664,7 +664,7 @@ section#contact {
     background-color: #d1e1f7;
     background-image: url('{{ site.baseurl }}/img/header-bg.svg');
     background-position: bottom center;
-    background-size: 500px;
+    background-size: 400px;
     background-repeat: no-repeat;
     padding-bottom: 300px;
 }
